--- a/homework/express/express-pirates-update-delete/views/pirates/index.hbs
+++ b/homework/express/express-pirates-update-delete/views/pirates/index.hbs
@@ -3,6 +3,8 @@
 <ul>
   {{#each pirates}}
     <li><a href="/pirates/{{@index}}"><h2>{{name}}</h2></a></li>
+    <form action="/pirates/{{@index}}?_method=DELETE" method="POST">
+    <input type = "submit" value="DELETE"/>
   {{/each}}
 </ul>
 
