new.hbs pirate completed

--- a/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/new.hbs
+++ b/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/new.hbs
@@ -1,1 +1,24 @@
-<h1>{{new}}</h1>
+<form action="/pirates" method="post">
+    <div>
+        <label for="name">Name:</label>
+        <input type="text" name="name">
+    </div>
+
+      <div>
+        <label for="birthplace">Birthplace:</label>
+        <input type="text" name="birthplace">
+    </div>
+
+      <div>
+        <label for="death_year">Year of Death:</label>
+        <input type="text" name="death_year">
+    </div>
+
+      <div>
+        <label for="nickname">Nickname:</label>
+        <input type="text" name="nickname">
+    </div>
+
+
+    <button type="submit">Submit your Pirate Homie here.</button>
+</form>
