--- a/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/new.hbs
+++ b/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/new.hbs
@@ -20,5 +20,5 @@
     </div>
 
 
-    <button type="submit">Submit your Pirate Homie here.</button>
+    <button type="submit">Your Pirate Homie is submitted here.</button>
 </form>
